Fixed project page overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  
+
 }
 
 .App-logo {
@@ -134,8 +134,8 @@ h2 {
   text-align: center;
   font-family: 'Gudea', sans-serif;
   color: whitesmoke;
-  padding: 20px;
-  float: left;
+  padding-bottom: 55px;
+  padding-top: 20px;
   height: 100vh;
   width: 100vw;
   position: relative;
